# pixelmatch

./: .czrc  .gitignore  .lintstagedrc.cjs  .prettierignore  .releaserc  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  bench.ts  eslint.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
benches/: pixelmatch.rs
crate/: aa.rs  color.rs  lib.rs  napi_bindings.rs  wasm_bindings.rs
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64-gnu/: package.json
npm/linux-x64-gnu/: package.json
npm/linux-x64-musl/: package.json
npm/win32-x64-msvc/: package.json
src/: cli.ts  compat-fallback.ts  compat.ts  index.ts  pixelmatch.ts  types.ts  validate.ts  wasm.ts
test/: pixelmatch.test.ts
tests/: integration.rs
